# persona-bench

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_benchmark.py
personabench/: __init__.py  cli.py  core.py  schemas.py
personabench/analysis/: __init__.py  aggregator.py  reporter.py
personabench/dashboard/: __init__.py  app.py
personabench/generator/: __init__.py  conversation.py  persona_factory.py
personabench/runner/: __init__.py  attack_runner.py  scorer.py
